force-app/main/default/objects/iTalentDev__SLC_Translated_Lead_Detail__c/fields/iTalentDev__Language__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Language__c</fullName>
    <label>Language</label>
    <length>255</length>
    <type>Text</type>
</CustomField>