force-app/main/default/objects/iTalentDev__SLC_Translated_Lead_Detail__c/fields/iTalentDev__Translated_Title__c.field-meta.xml
<CustomField>
    <fullName>iTalentDev__Translated_Title__c</fullName>
    <label>Translated Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>