force-app/main/default/objects/iTalentDev__SLC_Translated_Lead_Detail__c/listViews/iTalentDev__All.listView-meta.xml
<ListView>
    <fullName>iTalentDev__All</fullName>
    <columns>NAME</columns>
    <columns>iTalentDev__Lead_Id__c</columns>
    <columns>iTalentDev__Document_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>